# Learning-Rust

./: Cargo.toml  README.md  SETUP.md
exercises/01_hello_world/src/: main.rs
exercises/02_primitives/src/: main.rs
exercises/03_custom_types/: Cargo.toml
exercises/03_custom_types/src/: main.rs
exercises/04_variable_bindings/: Cargo.toml
exercises/04_variable_bindings/src/: main.rs
exercises/05_control_flow/: Cargo.toml
exercises/05_control_flow/src/: main.rs
exercises/06_functions/src/: main.rs
exercises/07_ownership_borrowing/: Cargo.toml
exercises/07_ownership_borrowing/src/: main.rs
exercises/08_error_handling/src/: main.rs
exercises/09_collections/src/: main.rs
